idf_component_register(SRCS  "main.c"
                        "util.c"
                        "RPCProtocol/RPCProtocol_ll_esp32now.c"
                        "RPCProtocol/RPCProtocol_cfg.c"
                        "RPCProtocol/RPCProtocol.c"
                        "crc.c"
                        "rpc_cmd_cb.c"
                        "Limiter.c"
                        "Battery.c"
                        "Filter.c"
                        "gui/MainPage.c"
                        "gui/StatusBar.c"
                        "gui/font/Jcyt_500W_20.c"
                        "gui/lv_port_indev.c"
                        "task/gui_task.c"
                        "McpwmServo.c"
                        "step_main.cpp"
                        "rotary_encoder_drv.c"
                    INCLUDE_DIRS "." "RPCProtocol" "task" "gui")